force-app/main/default/objects/AH_Product_Migration__c/AH_Product_Migration__c.object-meta.xml
<CustomObject>
    <description>NICC-034281</description>
    <label>Product Migration</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Product Migration Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>