force-app/main/default/objects/AH_Product_Migration__c/fields/Create_Migration_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Migration_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-034281</description>
    <label>Create Migration Case</label>
    <type>Checkbox</type>
</CustomField>