force-app/main/default/objects/AH_Product_Migration__c/fields/From_Product__c.field-meta.xml
<CustomField>
    <fullName>From_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Migration_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>