force-app/main/default/objects/AH_Product_Migration__c/fields/Migration_Complete__c.field-meta.xml
<CustomField>
    <fullName>Migration_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Complete</label>
    <type>Checkbox</type>
</CustomField>