force-app/main/default/objects/AH_Product_Migration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Migrations</relationshipLabel>
    <relationshipName>Product_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>