force-app/main/default/objects/AH_Product_Migration__c/fields/To_Product__c.field-meta.xml
<CustomField>
    <fullName>To_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Product migrating to</inlineHelpText>
    <label>To Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Migration_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>