force-app/main/default/objects/AH_Product_Migration__c/fields/To_SKU__c.field-meta.xml
<CustomField>
    <fullName>To_SKU__c</fullName>
    <formula>To_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To SKU</label>
    <type>Text</type>
</CustomField>