force-app/main/default/objects/AH_Product_Migration__c/validationRules/Cutoff_Date_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Cutoff_Date_in_Past</fullName>
    <active>false</active>
    <errorConditionFormula>Cut_Off_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Cut Off Date Cannot be changed to a day in the past</errorMessage>
</ValidationRule>