force-app/main/default/objects/AH_Product_Migration__c/validationRules/Migration_Is_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Migration_Is_Completed</fullName>
    <active>true</active>
    <description>Blocks updates to product migration records that Migration_Complete__c is checked</description>
    <errorConditionFormula>Migration_Complete__c</errorConditionFormula>
    <errorMessage>You cannot alter a completed product migration record.</errorMessage>
</ValidationRule>