force-app/main/default/objects/AH_Product_Migration__c/listViews/All_Product_Migrations.listView-meta.xml
<ListView>
    <fullName>All_Product_Migrations</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Create_Migration_Case__c</columns>
    <columns>Cut_Off_Date__c</columns>
    <columns>From_Product_Name__c</columns>
    <columns>To_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Migrations</label>
</ListView>